# rescore

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
rescore-cli/: CMakeLists.txt
rescore-cli/src/: main.cpp
rescore-core/: CMakeLists.txt
rescore-core/include/rescore/: byte_reader.hpp  container.hpp  convert.hpp  entries.hpp  ir.hpp  lzss.hpp  musicxml.hpp  others.hpp  result.hpp  version.hpp
rescore-core/src/: byte_reader.cpp  convert.cpp  ir.cpp
rescore-core/src/container/: container.cpp  entries.cpp  lzss.cpp  lzss_lit_tables.inc  others.cpp  version.cpp
rescore-core/src/musicxml/: emit.cpp
rescore-gui/: CMakeLists.txt
rescore-gui/src/: main.cpp
tests/: CMakeLists.txt  byte_reader_test.cpp  corpus_harness_test.cpp  emit_trivial_test.cpp  entries_test.cpp  ir_duration_test.cpp  lzss_others_test.cpp  version_detect_test.cpp
tests/corpus/re/: Gounod-Meditation-Piano.mus  Tomkins_-_Out_of_the_deep.mus  Tye_-_Alleluia.mus  artic.mus  chord-ceg.mus  dyn-marks.mus  dyn-staff.mus  dynamics.mus  empty-bass.mus  empty-cmaj-baseline.mus  empty-fmaj.mus  empty-gmaj.mus  lyrics.mus  note-fflat4-whole.mus  note-fsharp4-whole.mus  note-g4-quarter.mus  piano-both.mus  run-cdef-q.mus  slur.mus  tie.mus  triplet.mus  two-measures.mus  voices.mus
